--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonp": "^0.2.1",
     "stylus": "^0.54.5",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.1.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
