--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-scroll": "^1.8.0",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
     "jsonp": "^0.2.1",
     "stylus": "^0.54.5",
     "vue": "^2.5.2",
